--- Build scripts commenting and refactoring. Step. Rewriting comments

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,9 @@
-systemProp.aws.profile=git-implementations
+# We specify this custom S3 endpoint to use Yandex Cloud instead of AWS for S3 Maven repos.
+# Do not confuse the endpoint and the repo URL.
+# The endpoint is a more basic entity.
+# The repo URL is specifed in the build scripts instead of here.
 systemProp.org.gradle.s3.endpoint=https://s3.yandexcloud.net
+
+# An AWS profile with credentials for PUBLISHING dynamic-api artifacts to Yandex S3 Maven repo.
+# Only the developer of this project has those credentials on his computer.
+systemProp.aws.profile=git-implementations
